homework-03/k8s/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework03-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: homework03
  template:
    metadata:
      labels:
        component: homework03
    spec:
      containers:
        - name: homework-03
          image: lekseich/homework-03:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
