homework-03/k8s/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework03-service
spec:
  type: ClusterIP
  selector:
    component: homework03
  ports:
    - protocol: TCP
      port: 8000
